<resources>
    <string name="app_name">BuyTicket</string>
    <string name="male">男生</string>
    <string name="female">女生</string>
    <string name="regularticket">全票</string>
    <string name="childticket">兒童票</string>
    <string name="studentticket">學生票</string>
    <string name="Sure">確定</string>
    <string name="HowMany">購買張數:</string>
    <string name="MorF">性別:</string>
    <string name="WhichTicket">票種:</string>
    <string name="FiveHun">500元</string>
    <string name="FourHun">400元</string>
    <string name="TwoFiveHun">250元</string>
</resources>